--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
 	"main": "./lib/init.js",
 	"repository": "git@github.com:skerit/protoblast.git",
 	"license": "MIT",
+	"devDependencies": {
+		"mocha": "1.20.x"
+	},
 	"engines": {
 		"node": ">=0.10"
 	}
