--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"test": "node_modules/.bin/mocha --reporter spec"
 	},
 	"devDependencies": {
-		"mocha": "1.20.x"
+		"mocha": "1.20.x",
+		"matcha": "skerit/matcha"
 	},
 	"engines": {
 		"node": ">=0.10"
