--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "protoblast",
 	"description": "Handy functions for several classes' prototype",
-	"version": "0.1.4",
+	"version": "0.1.5-alpha",
 	"author": "Jelle De Loecker <jelle@codedor.be>",
 	"keywords": ["prototype", "util", "functional", "server", "client", "browser"],
 	"main": "./lib/init.js",
