--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "protoblast",
 	"description": "Handy functions for several classes' prototype",
-	"version": "0.1.6-alpha",
+	"version": "0.1.6",
 	"author": "Jelle De Loecker <jelle@codedor.be>",
 	"keywords": ["prototype", "util", "functional", "server", "client", "browser"],
 	"main": "./lib/init.js",
@@ -18,6 +18,7 @@
 		"wd": "0.3.x"
 	},
 	"engines": {
-		"node": ">=0.10"
+		"node": ">=0.10",
+		"iojs": "1.x.x"
 	}
 }
