--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "protoblast",
-	"description": "Handy functions for several classes' prototype",
+	"description": "Add useful methods to native objects",
 	"version": "0.1.9",
-	"author": "Jelle De Loecker <jelle@codedor.be>",
+	"author": "Jelle De Loecker <jelle@develry.be>",
 	"keywords": ["prototype", "util", "functional", "server", "client", "browser"],
 	"main": "./lib/init.js",
 	"repository": "git@github.com:skerit/protoblast.git",
