--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"scripts": {
 		"test": "node_modules/.bin/mocha --reporter spec"
 	},
+	"main": "lib/init.js",
 	"devDependencies": {
 		"browserify": "5.11.0",
 		"coveralls": "^2.11.6",
