--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "protoblast",
 	"description": "Add useful methods to native objects",
-	"version": "0.3.0",
+	"version": "0.3.1-alpha",
 	"author": "Jelle De Loecker <jelle@develry.be>",
 	"keywords": [
 		"prototype",
