--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "protoblast",
 	"description": "Add useful methods to native objects",
-	"version": "0.3.1-alpha",
+	"version": "0.3.1",
 	"author": "Jelle De Loecker <jelle@develry.be>",
 	"keywords": [
 		"prototype",
@@ -28,6 +28,5 @@
 	},
 	"engines": {
 		"node": ">=0.10"
-	},
-	"private": true
+	}
 }
