--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "protoblast",
-	"description": "Add useful methods to native objects",
+	"description": "Native object expansion library",
 	"version": "0.3.2",
 	"author": "Jelle De Loecker <jelle@develry.be>",
 	"keywords": [
@@ -28,6 +28,5 @@
 	},
 	"engines": {
 		"node": ">=0.10"
-	},
-	"private": true
+	}
 }
