--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "protoblast",
 	"description": "Native object expansion library",
-	"version": "0.3.3-alpha",
+	"version": "0.3.3",
 	"author": "Jelle De Loecker <jelle@develry.be>",
 	"keywords": [
 		"prototype",
@@ -28,6 +28,5 @@
 	},
 	"engines": {
 		"node": ">=0.10"
-	},
-	"private": true
+	}
 }
