--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "protoblast",
 	"description": "Native object expansion library",
-	"version": "0.3.4",
+	"version": "0.3.5-alpha",
 	"author": "Jelle De Loecker <jelle@develry.be>",
 	"keywords": [
 		"prototype",
@@ -28,5 +28,6 @@
 	},
 	"engines": {
 		"node": ">=0.10"
-	}
+	},
+	"private": true
 }
