--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "protoblast",
 	"description": "Native object expansion library",
-	"version": "0.3.8-alpha",
+	"version": "0.3.8",
 	"author": "Jelle De Loecker <jelle@develry.be>",
 	"keywords": [
 		"prototype",
@@ -12,7 +12,7 @@
 		"browser"
 	],
 	"repository": "skerit/protoblast",
-	"homepage": "http://protoblast.develry.be/",
+	"homepage": "https://protoblast.develry.be/",
 	"license": "MIT",
 	"scripts": {
 		"test": "node_modules/.bin/mocha --reporter spec"
@@ -28,6 +28,5 @@
 	},
 	"engines": {
 		"node": ">=0.11"
-	},
-	"private": true
+	}
 }
