--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 node_js:
-  - "0.11"
-  - "4.8.0"
-  - "5.9.1"
-  - "6.10.0"
+  - "4.8.4"
+  - "6.11.4"
+  - "8.6.0"
+env:
+  - TZ="Europe/Brussels"
