--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "protoblast",
 	"description": "Native object expansion library",
-	"version": "0.4.0",
+	"version": "0.4.1-alpha",
 	"author": "Jelle De Loecker <jelle@develry.be>",
 	"keywords": [
 		"prototype",
@@ -31,5 +31,6 @@
 	},
 	"engines": {
 		"node": ">=4.8"
-	}
+	},
+	"private": true
 }
