--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "protoblast",
 	"description": "Native object expansion library",
-	"version": "0.4.2-alpha",
+	"version": "0.4.2",
 	"author": "Jelle De Loecker <jelle@develry.be>",
 	"keywords": [
 		"prototype",
@@ -35,6 +35,5 @@
 	},
 	"engines": {
 		"node": ">=4.8"
-	},
-	"private": true
+	}
 }
