--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"git-rev"    : "0.2.1",
 		"istanbul"   : "^0.4.5",
 		"matcha"     : "skerit/matcha",
-		"mocha"      : "1.20.x",
+		"mocha"      : "^5.0.1",
 		"uglify-js"  : "3.2.0",
 		"wd"         : "1.4.1"
 	},
