--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,47 @@
-# Ignore IDE specific files
+## IDE files
 *.komodo*
 *.sublime*
 .idea/
 
-# Ignore special files
+## OS specific files
 .DS_Store
+.DS_Store?
 .fuse*
 ._*
-*.bin
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# Ignore log files
+# Log files
 npm-debug.log
 v8.log
+*.cpuprofile
+callgrind*
+*.wtf-trace
 
-# Ignore node modules
-/node_modules/
+# Dependencies
+node_modules/
+
+# Coverage directory used by istanbul
+.nyc_output/
+coverage/
+
+# Coveralls contains private info
+.coveralls.yml
 
 # The generated client file
 client-file.js
 client-file-common.js
 
-# Ignore local test files
-scratch*
+# Locks
+package-lock.json
+npm-shrinkwrap.json
+yarn.lock
 
-# Ignore coverage results
-/coverage/
-.coveralls.yml
+# Others
+*.bin
+
+# Ignore test files
+scratch*
+log.json
