--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
 	"scripts": {
 		"test"            : "node_modules/.bin/mocha --reporter spec",
 		"coverage"        : "./node_modules/istanbul/lib/cli.js cover _mocha",
-		"report-coverage" : "cat ./coverage/lcov.info | coveralls"
+		"report-coverage" : "cat ./coverage/lcov.info | codecov"
 	},
 	"main": "lib/init.js",
 	"devDependencies": {
 		"browserify" : "5.11.0",
-		"coveralls"  : "^2.11.6",
+		"codecov"    : "~3.0.0",
 		"git-rev"    : "0.2.1",
 		"istanbul"   : "^0.4.5",
 		"matcha"     : "skerit/matcha",
