--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "protoblast",
 	"description": "Native object expansion library",
-	"version": "0.5.4",
+	"version": "0.5.5-alpha",
 	"author": "Jelle De Loecker <jelle@develry.be>",
 	"keywords": [
 		"prototype",
@@ -12,7 +12,7 @@
 		"browser"
 	],
 	"dependencies": {
-		"json-dry"  : "~1.0.3"
+		"json-dry"  : "~1.0.4"
 	},
 	"repository": "skerit/protoblast",
 	"homepage": "https://protoblast.develry.be/",
