--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
 	},
 	"main": "lib/init.js",
 	"devDependencies": {
-		"browserify" : "5.11.0",
-		"codecov"    : "~3.0.0",
-		"git-rev"    : "0.2.1",
-		"istanbul"   : "^0.4.5",
-		"matcha"     : "skerit/matcha",
-		"mocha"      : "^5.0.1",
-		"uglify-js"  : "3.2.0",
-		"wd"         : "1.4.1"
+		"browserify"           : "5.11.0",
+		"codecov"              : "~3.0.0",
+		"git-rev"              : "0.2.1",
+		"istanbul"             : "^0.4.5",
+		"matcha"               : "skerit/matcha",
+		"mocha"                : "^5.0.1",
+		"promises-aplus-tests" : "~2.1.2",
+		"uglify-js"            : "3.2.0",
+		"wd"                   : "1.4.1"
 	},
 	"engines": {
 		"node": ">=4.8"
