--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"codecov"              : "~3.0.0",
 		"git-rev"              : "0.2.1",
 		"istanbul"             : "^0.4.5",
+		"jsuri"                : "~1.3.1",
 		"matcha"               : "skerit/matcha",
 		"mocha"                : "^5.0.1",
 		"promises-aplus-tests" : "~2.1.2",
