Sync the npmignore file with gitignore

--- a/.npmignore
+++ b/.npmignore
@@ -1,31 +1,59 @@
-# Ignore IDE specific files
+# IDE files
 *.komodo*
 *.sublime*
 .idea/
 
-# Ignore special files
+## OS specific files
 .DS_Store
+.DS_Store?
 .fuse*
 ._*
-*.bin
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# Ignore log files
+# Log files
 npm-debug.log
 v8.log
+*.cpuprofile
+callgrind*
+*.wtf-trace
+deoptigate/
+*.0x/
+deoptigate/
 
 # Ignore node modules
 /node_modules/
+
+# Coverage directory used by istanbul
+.nyc_output/
+coverage/
+
+# Coveralls contains private info
+.coveralls.yml
+
+# This can contain the private token
+# (This is NOT .codecov.yml)
+codecov.yml
 
 # The generated client file
 client-file.js
 client-file-common.js
 
-# Ignore local test files
-scratch*
+# Locks
+package-lock.json
+npm-shrinkwrap.json
+yarn.lock
 
-# Ignore coverage results
-/coverage/
-.coveralls.yml
+# Others
+*.bin
+
+# Ignore test files
+scratch*
+log.json
+
+## More files that don't need to go on NPM
 
 # Ignore benchmarks
 /benchmark/
@@ -33,3 +61,8 @@ scratch*
 # The samples and test folder shouldn't go on npm
 samples/*
 test/*
+
+/selenium/
+.codecov.yml
+.travis.yml
+*.tgz
