--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "protoblast",
 	"description": "Native object expansion library",
-	"version": "0.7.1-alpha",
-	"author": "Jelle De Loecker <jelle@develry.be>",
+	"version": "0.7.1",
+	"author": "Jelle De Loecker <jelle@elevenways.be>",
 	"keywords": [
 		"prototype",
 		"util",
@@ -12,9 +12,9 @@
 		"browser"
 	],
 	"dependencies": {
-		"json-dry"  : "~1.0.10"
+		"json-dry"  : "~1.0.12"
 	},
-	"repository": "skerit/protoblast",
+	"repository": "11ways/protoblast",
 	"homepage": "https://protoblast.develry.be/",
 	"license": "MIT",
 	"scripts": {
