--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "protoblast",
 	"description": "Native object expansion library",
-	"version": "0.7.1",
+	"version": "0.7.2-alpha",
 	"author": "Jelle De Loecker <jelle@elevenways.be>",
 	"keywords": [
 		"prototype",
@@ -37,5 +37,6 @@
 	},
 	"engines": {
 		"node": ">=8.9.0"
-	}
+	},
+	"private": true
 }
