--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"matcha"               : "skerit/matcha",
 		"mocha"                : "^5.0.1",
 		"promises-aplus-tests" : "~2.1.2",
+		"source-map"           : "~0.7.3",
 		"uglify-js"            : "3.2.0",
 		"wd"                   : "1.4.1"
 	},
