--- a/package.json
+++ b/package.json
@@ -24,17 +24,18 @@
 	},
 	"main": "lib/init.js",
 	"devDependencies": {
-		"browserify"           : "5.11.0",
-		"codecov"              : "~3.7.0",
-		"git-rev"              : "0.2.1",
-		"istanbul"             : "^0.4.5",
-		"jsuri"                : "~1.3.1",
-		"matcha"               : "skerit/matcha",
-		"mocha"                : "^5.0.1",
-		"promises-aplus-tests" : "~2.1.2",
-		"source-map"           : "~0.7.3",
-		"uglify-js"            : "3.2.0",
-		"wd"                   : "1.4.1"
+		"browserify"              : "5.11.0",
+		"codecov"                 : "~3.7.0",
+		"git-rev"                 : "0.2.1",
+		"istanbul"                : "^0.4.5",
+		"istanbul-lib-instrument" : "~4.0.3",
+		"jsuri"                   : "~1.3.1",
+		"matcha"                  : "skerit/matcha",
+		"mocha"                   : "^5.0.1",
+		"promises-aplus-tests"    : "~2.1.2",
+		"source-map"              : "~0.7.3",
+		"uglify-js"               : "3.2.0",
+		"wd"                      : "1.4.1"
 	},
 	"engines": {
 		"node": ">=8.9.0"
