--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
 	"homepage": "https://protoblast.develry.be/",
 	"license": "MIT",
 	"scripts": {
-		"test"            : "mocha --exit --reporter spec --bail --timeout 5000",
-		"coverage"        : "nyc --reporter=text --reporter=lcov --silent mocha --exit --timeout 20000 --bail",
+		"test"            : "mocha --exit --reporter spec --bail --timeout 5000 --file test/00-init.js",
+		"coverage"        : "nyc --reporter=text --reporter=lcov --silent mocha --exit --timeout 20000 --bail --file test/00-init.js",
 		"report-coverage" : "nyc report --reporter=lcov && cat ./coverage/lcov.info | codecov"
 	},
 	"main": "lib/init.js",
