--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,3 +1,5 @@
+codecov:
+  max_report_age: off
 ignore:
   - "lib/weakmap.js"  # ignore weakmap polyfill
   - "lib/symbol.js"   # ignore symbol polyfill
