--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "protoblast",
 	"description": "Native object expansion library",
-	"version": "0.7.2",
+	"version": "0.7.3-alpha",
 	"author": "Jelle De Loecker <jelle@elevenways.be>",
 	"keywords": [
 		"prototype",
@@ -20,7 +20,7 @@
 	"scripts": {
 		"test"            : "mocha --exit --reporter spec --bail --timeout 5000 --file test/00-init.js",
 		"coverage"        : "nyc --reporter=text --reporter=lcov mocha --exit --timeout 20000 --bail --file test/00-init.js",
-		"report-coverage" : "nyc report --reporter=lcov && cat ./coverage/lcov.info | codecov"
+		"report-coverage" : "codecov"
 	},
 	"main": "lib/init.js",
 	"devDependencies": {
@@ -40,5 +40,6 @@
 	},
 	"engines": {
 		"node": ">=10.21.0"
-	}
+	},
+	"private": true
 }
