--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "protoblast",
 	"description": "Native object expansion library",
-	"version": "0.7.8-alpha",
+	"version": "0.7.8",
 	"author": "Jelle De Loecker <jelle@elevenways.be>",
 	"keywords": [
 		"prototype",
@@ -40,6 +40,5 @@
 	},
 	"engines": {
 		"node": ">=10.21.0"
-	},
-	"private": true
+	}
 }
