--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 	},
 	"main": "lib/init.js",
 	"devDependencies": {
-		"browserify"              : "~17.0.0",
+		"browserify"              : "~16.5.1",
 		"codecov"                 : "~3.8.3",
 		"git-rev"                 : "0.2.1",
 		"istanbul-lib-instrument" : "~4.0.3",
@@ -33,7 +33,7 @@
 		"mocha"                   : "~8.0.1",
 		"nyc"                     : "^15.1.0",
 		"promises-aplus-tests"    : "~2.1.2",
-		"puppeteer"               : "~19.3.0",
+		"puppeteer"               : "18.0.0",
 		"source-map"              : "~0.7.3",
 		"uglify-js"               : "3.2.0",
 		"wd"                      : "~1.12.1"
