--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"git-rev"                 : "0.2.1",
 		"istanbul-lib-instrument" : "~4.0.3",
 		"jsuri"                   : "~1.3.1",
-		"matcha"                  : "skerit/matcha",
+		"@c4312/matcha"           : "~1.3.1",
 		"mocha"                   : "~8.0.1",
 		"nyc"                     : "^15.1.0",
 		"promises-aplus-tests"    : "~2.1.2",
