--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "protoblast",
 	"description": "Native object expansion library",
-	"version": "0.8.1-alpha",
+	"version": "0.8.1",
 	"author": "Jelle De Loecker <jelle@elevenways.be>",
 	"keywords": [
 		"prototype",
@@ -12,7 +12,7 @@
 		"browser"
 	],
 	"dependencies": {
-		"json-dry" : "~2.0.0"
+		"json-dry" : "~2.0.1"
 	},
 	"repository": "11ways/protoblast",
 	"homepage": "https://protoblast.develry.be/",
