--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 	"homepage": "https://protoblast.develry.be/",
 	"license": "MIT",
 	"scripts": {
-		"coverage"        : "nyc --reporter=text --reporter=lcov mocha --exit --timeout 20000 --bail --file test/00-init.js",
+		"coverage"        : "c8 --reporter=text --reporter=lcov mocha --exit --timeout 20000 --bail --file test/00-init.js",
 		"report-coverage" : "codecov",
 		"test"            : "mocha --exit --reporter spec --bail --timeout 5000 --file test/00-init.js"
 	},
@@ -31,7 +31,7 @@
 		"jsuri"                   : "~1.3.1",
 		"@c4312/matcha"           : "~1.3.1",
 		"mocha"                   : "~10.2.0",
-		"nyc"                     : "^15.1.0",
+		"c8"                      : "^9.1.0",
 		"promises-aplus-tests"    : "~2.1.2",
 		"puppeteer"               : "18.0.0",
 		"source-map"              : "~0.7.3",
